# crohn-disease-llm-chat

./: LICENSE  README.md  main.py  pyproject.toml
data/: diet.txt  docs.txt
src/: app.py
src/backend/: config.py  ingest.py  rag_pipeline.py  streaming_callback.py
src/frontend/: app.py
